# swarm

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  CLI_readme.md  CONTEXT.md  HACKED.txt  LICENSE  MANIFEST.in  README.md  __init__.py  conftest.py  evaluator.py  min_compute.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-nodeps.txt  requirements.txt  setup.py  vecnorm.pkl
Maps/: LICENSE_CUSTOM_MAPS.md
Maps/City_Generator_Prototype/: city_gen.py  run_city_sim.py
Maps/Forest_Prototype/: forest_map.py
Maps/Warehouse_Prototype/: .gitignore  shared.py  warehouse.py
Maps/assets/: README.md
Maps/ski-resort based map prototype/: city_gen.py  load_mountains_only.py  load_ski_village.py
RL/: test_RL.py  test_secure_RL.py  train_RL.py  train_RL_with_info.py
RL/legacy/: __init__.py  test_RL.py  train_RL.py
debugging/: bench_full_eval.py  gen_platform_images.py  generate_video.py  test_timings.py
docs/: CLI_readme.md  king_of_the_hill.md  miner.md  roadmap.md  scoring.md  validator.md
docs/adr/: ADR-0001-multi-family-domain-model.md
neurons/: burn_validator.py  flying_strategy.py  miner.py  validator.py
neurons/feedback/: feedback_analyzer.py
scripts/: README.md  __init__.py  bench_full_eval.py  benchmark_with_videos.py  debug_idempotency_report.py  gen_platform_images.py  generate_video.py  prebake_mannequin_parts.py  sar_baseline_audit.py  sar_horizon_audit.py  sar_spawn_audit.py  stress_benchmark_compare.py  sync_family_registry.py  test_timings.py  visualize_map.py
scripts/miner/: install_dependencies.sh  setup.sh
scripts/validator/: weight_history.py
swarm/: __init__.py  __main__.py  city_gen.py  cli.py  constants.py  policy_interface.py  protocol.py  run_city_sim.py
swarm/assets/: interceptor_drone.urdf
swarm/base/: burn_validator.py  miner.py  neuron.py  validator.py
swarm/benchmark/: __main__.py  engine.py  idempotency.py  public_seeds_v1.json
swarm/challenge_families/: __init__.py  autopilot.py  base.py  interceptor.py  search_and_rescue.py  swarm_autopilot.py  swarm_sar.py
swarm/config/: __init__.py  runtime.py
swarm/core/: Model_verify.py  __init__.py  aviary_raw.py  city_generator.py  container_launcher.py  drone.py  entrypoint.py  env_builder.py  evaluator.py  evaluator_host.py  evaluator_optimized.py  evaluator_ultra_fast.py  flying_strategy.py  forest_generator.py  model_verify.py  mountain_generator.py  moving_drone.py  randomizer.py  secure_loader.py  submission_policy.py  training_verification.py
swarm/domain_model/: __init__.py  benchmark_domain_model.schema.json
swarm/policy_samples/sac_baseline/: pyproject.toml
swarm/policy_samples/sac_baseline/pilot/: __init__.py
tests/: Video_Recorder.py  conftest.py  replay_flightplan.py  test_RL copy.py  test_RL.py  test_apply_backend_weights_absolute.py  test_autopilot_benchmark_template.py  test_autopilot_family.py  test_backend_api.py  test_backend_client_integration.py  test_base_validator_runtime_tracking.py  test_bench_full_eval.py  test_benchmark_default_model_fixed_seeds.py  test_benchmark_idempotency.py  test_benchmark_template.py  test_benchmark_with_videos.py  test_challenge_family_boundaries.py  test_challenge_family_runtime.py  test_check_validator_health.py  test_city_generator_core.py  test_cli.py  test_constants.py  test_core_evaluator.py  test_debug_idempotency_report.py  test_docker_evaluator.py  test_domain_model_contract.py  test_domain_model_legacy_alignment.py  test_domain_model_naming.py  test_e2e_integration.py  test_e2e_live_subtensor.py  test_env_builder_build.py  test_env_determinism.py  test_env_factory.py  test_env_runtime_smoke.py  test_environment_report.py  test_epoch_publish_retry.py  test_flightplan.py  test_flightplan_validation.py  test_forest_gpu_visuals.py  test_forest_safe_zones.py  (+66 more)
training_pipeline/: .gitignore  README.md  TRAINING_ARCHITECTURE.md  drone_agent.py  training_env.py
(+759 files in other folders)
